# mantalon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  todo.yml
examples/absences/: manifest.json
examples/insaplace/: capcha_solver.js  fake-location.js  login.js  main_page.js  manifest.json  overlay.js  redirect_on_login.js  test.js
examples/wikipedia/: injected.js  manifest.json  pink-theme.css
mantalon-client/: Cargo.toml  README.md  index.html  sw.js
mantalon-client/examples/: wikipedia.html
mantalon-client/scripts/: lock_browsing.js
mantalon-client/src/: body.rs  compat.rs  cookies.rs  executor.rs  exports.rs  lib.rs  manifest.rs  pool.rs  sender.rs  vpn.rs  websocket.rs
mantalon-frame/: index.html
mantalon-portal/: .gitignore  README.md  bundle-js-proxy.mjs  bundle.mjs  index.html  package-lock.json  package.json  serve-dev.js  sw.ts
mantalon-portal/examples/cas/: manifest.json
mantalon-portal/examples/insaplace/: manifest.json  overlay.js  redirect_on_login.js
mantalon-portal/examples/recaptcha/: README.md  manifest.json
mantalon-portal/examples/wikipedia/: manifest.json
mantalon-portal/js-proxy/: document.ts  location.ts  main.ts  message.ts  window.ts  worker.ts
mantalon-portal/js-proxy/simple/: iframe.ts  worker.ts
mantalon-portal/scripts/: js_redirect.html  lock_browsing.js
mantalon-portal/src/: cookies.ts  headers.ts  js-proxy.ts  manifest.ts  substitutions.ts  sw.ts
mantalon-server/: Cargo.toml
mantalon-server/src/: dns.rs  errors.rs  handler.rs  main.rs  relay.rs
src/: errors.rs  main.rs
