[package]
name = "mantalon-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hyper = { version = "1.3", features = ["client", "http1", "http2"] }
http1 = "0.0.0"
http2 = "0.1.0"
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
hyper-rustls = "0.27"
webpki-roots = "0.26"
rustls = "0.23.5"
hyper-util = { version = "0.1.3", features = ["client-legacy", "client", "http1"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "WebSocket",
    "MessageEvent",
    "Blob",
    "FileReader",
]
