[package]
name = "mantalon-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hyper = { version = "1.3", features = ["client", "http1", "http2"] }
http1 = "0.0.0"
http2 = "0.1.0"
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
tokio-rustls = {path="../tokio-rustls", default-features=false, features=["ring", "web"]}
webpki-roots = "0.26.1"
pin-project-lite = "0.2.14"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "WebSocket",
    "MessageEvent",
    "Blob",
    "FileReader",
]
