[package]
name = "mantalon-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hyper = { version = "1.3", features = ["client", "http1", "http2"] }
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
tokio-rustls = {version="0.26", default-features=false, features=["ring"]}
webpki-roots = "0.26"
pin-project-lite = "0.2.14"
lazy_static = "1.4.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
ring = { version = "*", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "*", features = ["web"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "ServiceWorkerGlobalScope",
    "WorkerGlobalScope",
    "WebSocket",
    "MessageEvent",
    "Blob",
    "FileReader",
    "Document",
    "Element",
    "Response",
    "ResponseInit",
    "Headers",
    "Request",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamDefaultController",
    "Location",
    "WorkerLocation",
    "CacheStorage",
    "Cache",
]
