[package]
name = "mantalon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
futures = "0.3"
hyper = { version = "1.3", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-staticfile = "0.10"
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
multiaddr = "0.18"
soketto = { version = "0.8", features = ["http"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
trust-dns-client = { version="0.23", optional=true }
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
custom_dns = ["trust-dns-client"]
